--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/starlight": "^0.28.3",
+    "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.15.3",
     "sharp": "^0.32.5",
-    "@astrojs/check": "^0.9.4",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^3.7.3",
+    "eslint": "^9.12.0",
+    "eslint-plugin-astro": "^1.2.4"
   }
 }
