--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/sitemap": "^3.2.0",
     "@astrojs/starlight": "^0.28.3",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.15.3",
