--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.2.0",
     "@astrojs/starlight": "^0.28.3",
     "@astrojs/tailwind": "^5.1.2",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "astro": "^4.15.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
